# kizami

./: CLAUDE.md  README.md  main.py  pyproject.toml
plugin/.claude-plugin/: plugin.json
plugin/commands/: recall.md
src/: injector.py  reminder.py  timeline.py
tests/: test_reminder.py  test_timeline.py
