[project]
name = "kizami"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "sqlite-vec>=0.1.7",
]

[project.scripts]
kizami = "src.injector:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
